Correct items spacing mobile nav

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -28,7 +28,8 @@
     font-weight: bold;
 
     @media screen and (max-width: 720px) {
-      gap: 1rem;
+      gap: unset;
+      justify-content: space-between;
     }
 
     a {
